[RIC-431] Add UTs | Update AddEnbRequest | Update Swagger
